IataMessages/IataMessagesProcessor/Parsers/Antlr/fbl4Parser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.10.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from fbl4.g4 by ANTLR 4.10.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.10.1")]
[System.CLSCompliant(false)]
public partial class fbl4Parser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, LineIdentifierSsr=3, LineIdentifierOsi=4, LineIdentifierUld=5, 
		SeparatorSlant=6, SeparatorHyphen=7, A=8, N=9, G=10, SeparatorCrlf=11;
	public const int
		RULE_fbl4 = 0, RULE_standardMessageIdentification = 1, RULE_flightIdAndPointOfLoading = 2, 
		RULE_destinationHeader = 3, RULE_listCompleteIndicator = 4, RULE_flightIdentification = 5, 
		RULE_aircraftIdentification = 6, RULE_pointOfUnloading = 7, RULE_bookedCargo = 8, 
		RULE_consignmentDetail = 9, RULE_dimensionsInformation = 10, RULE_consignmentOriginInformation = 11, 
		RULE_consignmentOriginInfoDetail = 12, RULE_uldDescription = 13, RULE_specialServiceRequest = 14, 
		RULE_otherServiceInformation = 15, RULE_otherCustSecurityAndRegulatCtrlInfo = 16, 
		RULE_nilCargoIndication = 17, RULE_awbIdentification = 18, RULE_awbOriginAndDestination = 19, 
		RULE_quantityDetail = 20, RULE_volumeDetail = 21, RULE_densityGroup = 22, 
		RULE_totalWeightDetails = 23, RULE_totalConsignmentPieces = 24, RULE_shrs = 25, 
		RULE_specialHandlingRequirements = 26, RULE_ssrDetails1stLine = 27, RULE_ssrDetails2stLine = 28, 
		RULE_osiDetails1stLine = 29, RULE_osiDetails2stLine = 30, RULE_uldDescriptionItems = 31, 
		RULE_uldDescriptionInnerItems = 32, RULE_uldIdentification = 33, RULE_uldNumber = 34, 
		RULE_uldPositionInformation = 35, RULE_weightOfUldContents = 36, RULE_forwardingAgent = 37, 
		RULE_inwardFlightDetails = 38, RULE_movementPriority = 39, RULE_natureOfGoods = 40, 
		RULE_dimensions = 41, RULE_dimensionsDetails = 42, RULE_otherCustSecurityAndRegulatCtrlInfoDet = 43, 
		RULE_standardMessageIdentifier = 44, RULE_messageTypeVersionNumber = 45, 
		RULE_messageSequenceNumber = 46, RULE_lineIdentifier = 47, RULE_airlinePrefix = 48, 
		RULE_awbSerialNumber = 49, RULE_airportCodeOfLoading = 50, RULE_airportCodeOfUnloading = 51, 
		RULE_airportCodeOfOrigin = 52, RULE_airportCodeOfDestitation = 53, RULE_nilCargoCode = 54, 
		RULE_numberOfUldsTotal = 55, RULE_movementPriorityCode = 56, RULE_shipmentDescriptionCode = 57, 
		RULE_volumeCode = 58, RULE_volumeAmount = 59, RULE_densityIndicator = 60, 
		RULE_densityGroupInner = 61, RULE_dayOfScheduledDeparture = 62, RULE_monthOfScheduledDeparture = 63, 
		RULE_dayOfArrival = 64, RULE_monthOfArrival = 65, RULE_flightNumber = 66, 
		RULE_carrierCode = 67, RULE_uldType = 68, RULE_uldSerialNumber = 69, RULE_uldOwnerCode = 70, 
		RULE_uldLoadingIndicator = 71, RULE_measurementUnitCode = 72, RULE_lengthDimension = 73, 
		RULE_widthDimension = 74, RULE_heightDimension = 75, RULE_weightCode = 76, 
		RULE_weight = 77, RULE_numberOfPieces = 78, RULE_specialHandlingCode = 79, 
		RULE_isoCountryCode = 80, RULE_informationIdentifier = 81, RULE_custSecurityAndRegulatCtrlInfoId = 82, 
		RULE_endOfMessageCode = 83, RULE_aircraftRegistration = 84, RULE_supplemCustSecurityAndRegulatCtrlInfo = 85, 
		RULE_manifestDescriptionOfGoods = 86, RULE_abbreviatedName = 87, RULE_ssrDescription = 88, 
		RULE_osiDescription = 89;
	public static readonly string[] ruleNames = {
		"fbl4", "standardMessageIdentification", "flightIdAndPointOfLoading", 
		"destinationHeader", "listCompleteIndicator", "flightIdentification", 
		"aircraftIdentification", "pointOfUnloading", "bookedCargo", "consignmentDetail", 
		"dimensionsInformation", "consignmentOriginInformation", "consignmentOriginInfoDetail", 
		"uldDescription", "specialServiceRequest", "otherServiceInformation", 
		"otherCustSecurityAndRegulatCtrlInfo", "nilCargoIndication", "awbIdentification", 
		"awbOriginAndDestination", "quantityDetail", "volumeDetail", "densityGroup", 
		"totalWeightDetails", "totalConsignmentPieces", "shrs", "specialHandlingRequirements", 
		"ssrDetails1stLine", "ssrDetails2stLine", "osiDetails1stLine", "osiDetails2stLine", 
		"uldDescriptionItems", "uldDescriptionInnerItems", "uldIdentification", 
		"uldNumber", "uldPositionInformation", "weightOfUldContents", "forwardingAgent", 
		"inwardFlightDetails", "movementPriority", "natureOfGoods", "dimensions", 
		"dimensionsDetails", "otherCustSecurityAndRegulatCtrlInfoDet", "standardMessageIdentifier", 
		"messageTypeVersionNumber", "messageSequenceNumber", "lineIdentifier", 
		"airlinePrefix", "awbSerialNumber", "airportCodeOfLoading", "airportCodeOfUnloading", 
		"airportCodeOfOrigin", "airportCodeOfDestitation", "nilCargoCode", "numberOfUldsTotal", 
		"movementPriorityCode", "shipmentDescriptionCode", "volumeCode", "volumeAmount", 
		"densityIndicator", "densityGroupInner", "dayOfScheduledDeparture", "monthOfScheduledDeparture", 
		"dayOfArrival", "monthOfArrival", "flightNumber", "carrierCode", "uldType", 
		"uldSerialNumber", "uldOwnerCode", "uldLoadingIndicator", "measurementUnitCode", 
		"lengthDimension", "widthDimension", "heightDimension", "weightCode", 
		"weight", "numberOfPieces", "specialHandlingCode", "isoCountryCode", "informationIdentifier", 
		"custSecurityAndRegulatCtrlInfoId", "endOfMessageCode", "aircraftRegistration", 
		"supplemCustSecurityAndRegulatCtrlInfo", "manifestDescriptionOfGoods", 
		"abbreviatedName", "ssrDescription", "osiDescription"
	};

	private static readonly string[] _LiteralNames = {
		null, "'.'", "','", "'SSR/'", "'OSI/'", "'ULD/'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, "LineIdentifierSsr", "LineIdentifierOsi", "LineIdentifierUld", 
		"SeparatorSlant", "SeparatorHyphen", "A", "N", "G", "SeparatorCrlf"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "fbl4.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static fbl4Parser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public fbl4Parser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public fbl4Parser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class Fbl4Context : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentificationContext standardMessageIdentification() {
			return GetRuleContext<StandardMessageIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightIdAndPointOfLoadingContext flightIdAndPointOfLoading() {
			return GetRuleContext<FlightIdAndPointOfLoadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ListCompleteIndicatorContext listCompleteIndicator() {
			return GetRuleContext<ListCompleteIndicatorContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public DestinationHeaderContext[] destinationHeader() {
			return GetRuleContexts<DestinationHeaderContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public DestinationHeaderContext destinationHeader(int i) {
			return GetRuleContext<DestinationHeaderContext>(i);
		}
		public Fbl4Context(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_fbl4; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbl4Visitor<TResult> typedVisitor = visitor as Ifbl4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFbl4(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Fbl4Context fbl4() {
		Fbl4Context _localctx = new Fbl4Context(Context, State);
		EnterRule(_localctx, 0, RULE_fbl4);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 180;
			standardMessageIdentification();
			State = 181;
			flightIdAndPointOfLoading();
			State = 183;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 182;
					destinationHeader();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 185;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			State = 187;
			listCompleteIndicator();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StandardMessageIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public StandardMessageIdentifierContext standardMessageIdentifier() {
			return GetRuleContext<StandardMessageIdentifierContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fbl4Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public MessageTypeVersionNumberContext messageTypeVersionNumber() {
			return GetRuleContext<MessageTypeVersionNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fbl4Parser.SeparatorCrlf, 0); }
		public StandardMessageIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_standardMessageIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbl4Visitor<TResult> typedVisitor = visitor as Ifbl4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStandardMessageIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StandardMessageIdentificationContext standardMessageIdentification() {
		StandardMessageIdentificationContext _localctx = new StandardMessageIdentificationContext(Context, State);
		EnterRule(_localctx, 2, RULE_standardMessageIdentification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 189;
			standardMessageIdentifier();
			State = 190;
			Match(SeparatorSlant);
			State = 191;
			messageTypeVersionNumber();
			State = 192;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FlightIdAndPointOfLoadingContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public MessageSequenceNumberContext messageSequenceNumber() {
			return GetRuleContext<MessageSequenceNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] SeparatorSlant() { return GetTokens(fbl4Parser.SeparatorSlant); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant(int i) {
			return GetToken(fbl4Parser.SeparatorSlant, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightIdentificationContext flightIdentification() {
			return GetRuleContext<FlightIdentificationContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AirportCodeOfLoadingContext airportCodeOfLoading() {
			return GetRuleContext<AirportCodeOfLoadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fbl4Parser.SeparatorCrlf, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AircraftIdentificationContext aircraftIdentification() {
			return GetRuleContext<AircraftIdentificationContext>(0);
		}
		public FlightIdAndPointOfLoadingContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_flightIdAndPointOfLoading; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbl4Visitor<TResult> typedVisitor = visitor as Ifbl4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFlightIdAndPointOfLoading(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FlightIdAndPointOfLoadingContext flightIdAndPointOfLoading() {
		FlightIdAndPointOfLoadingContext _localctx = new FlightIdAndPointOfLoadingContext(Context, State);
		EnterRule(_localctx, 4, RULE_flightIdAndPointOfLoading);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 194;
			messageSequenceNumber();
			State = 195;
			Match(SeparatorSlant);
			State = 196;
			flightIdentification();
			State = 197;
			Match(SeparatorSlant);
			State = 198;
			airportCodeOfLoading();
			State = 200;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==SeparatorSlant) {
				{
				State = 199;
				aircraftIdentification();
				}
			}

			State = 202;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DestinationHeaderContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PointOfUnloadingContext pointOfUnloading() {
			return GetRuleContext<PointOfUnloadingContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BookedCargoContext[] bookedCargo() {
			return GetRuleContexts<BookedCargoContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BookedCargoContext bookedCargo(int i) {
			return GetRuleContext<BookedCargoContext>(i);
		}
		public DestinationHeaderContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_destinationHeader; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbl4Visitor<TResult> typedVisitor = visitor as Ifbl4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDestinationHeader(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DestinationHeaderContext destinationHeader() {
		DestinationHeaderContext _localctx = new DestinationHeaderContext(Context, State);
		EnterRule(_localctx, 6, RULE_destinationHeader);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 204;
			pointOfUnloading();
			State = 208;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==N) {
				{
				{
				State = 205;
				bookedCargo();
				}
				}
				State = 210;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListCompleteIndicatorContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public EndOfMessageCodeContext endOfMessageCode() {
			return GetRuleContext<EndOfMessageCodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorCrlf() { return GetToken(fbl4Parser.SeparatorCrlf, 0); }
		public ListCompleteIndicatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_listCompleteIndicator; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbl4Visitor<TResult> typedVisitor = visitor as Ifbl4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListCompleteIndicator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ListCompleteIndicatorContext listCompleteIndicator() {
		ListCompleteIndicatorContext _localctx = new ListCompleteIndicatorContext(Context, State);
		EnterRule(_localctx, 8, RULE_listCompleteIndicator);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 211;
			endOfMessageCode();
			State = 212;
			Match(SeparatorCrlf);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class FlightIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CarrierCodeContext carrierCode() {
			return GetRuleContext<CarrierCodeContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FlightNumberContext flightNumber() {
			return GetRuleContext<FlightNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fbl4Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public DayOfScheduledDepartureContext dayOfScheduledDeparture() {
			return GetRuleContext<DayOfScheduledDepartureContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public MonthOfScheduledDepartureContext monthOfScheduledDeparture() {
			return GetRuleContext<MonthOfScheduledDepartureContext>(0);
		}
		public FlightIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_flightIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbl4Visitor<TResult> typedVisitor = visitor as Ifbl4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitFlightIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public FlightIdentificationContext flightIdentification() {
		FlightIdentificationContext _localctx = new FlightIdentificationContext(Context, State);
		EnterRule(_localctx, 10, RULE_flightIdentification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 214;
			carrierCode();
			State = 215;
			flightNumber();
			State = 216;
			Match(SeparatorSlant);
			State = 217;
			dayOfScheduledDeparture();
			State = 218;
			monthOfScheduledDeparture();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AircraftIdentificationContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode SeparatorSlant() { return GetToken(fbl4Parser.SeparatorSlant, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public AircraftRegistrationContext aircraftRegistration() {
			return GetRuleContext<AircraftRegistrationContext>(0);
		}
		public AircraftIdentificationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_aircraftIdentification; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			Ifbl4Visitor<TResult> typedVisitor = visitor as Ifbl4Visitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAircraftIdentification(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AircraftIdentificationContext aircraftIdentification() {
		AircraftIdentificationContext _localctx = new AircraftIdentificationContext(Context, State);
		EnterRule(_localctx, 12, RULE_aircraftIdentification);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 220;
			Match(SeparatorSlant);
			State = 221;
			aircraftRegistration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
